# kcp

./: .gitignore  CMakeLists.txt  GTS-client.c  GTS-server.c  Makefile  README.md  action.c  action.h  args.c  args.h  cJSON.c  crypto_secretbox_salsa208poly1305.c  hash.c  hash.h  log.h  makefile  nat.c
cmake/: FindSODIUM.cmake
files/: GTS.init
openwrt/: Makefile
samples/: 35-GTS  CMakeLists.txt  add_user  add_user2  add_user3  add_user4  api_samples.c  api_samples.lua  client.json  client_down.sh  client_up.sh  del_user  del_user1  del_user2  server.json  server_down.sh  server_up.sh  show_stat
src/: CMakeLists.txt  GTS-client.c  GTS-server.c  action.c  action.h  args.c  args.h  cJSON.h  crypto.c  crypto.h  crypto_secretbox_salsa208poly1305.c  daemon.c  daemon.h  hash.c  hash.h  ikcp.c  log.c  makefile  nat.c  nat.h
