cmake_minimum_required(VERSION 2.6)

project(GTS C)

SET(CMAKE_MODULE_PATH ${GTS_SOURCE_DIR}/cmake)
SET(EXECUTABLE_OUTPUT_PATH ${GTS_BINARY_DIR}/bin)
# SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall -Wno-deprecated -ftemplate-depth-50 -fPIC -pg")
# SET(LINK_FLAGS "-pg")
MESSAGE(${CMAKE_MODULE_PATH})

ADD_DEFINITIONS(-pg)

ADD_DEFINITIONS(-Wall --std=gnu99)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)
