cmake_minimum_required(VERSION 2.6)

project(GTS C)

SET(CMAKE_MODULE_PATH ${GTS_SOURCE_DIR}/cmake)
SET(EXECUTABLE_OUTPUT_PATH ${GTS_BINARY_DIR}/bin)

MESSAGE(${CMAKE_MODULE_PATH})

IF(DEBUG)
ADD_DEFINITIONS(-g)
ELSE()
ADD_DEFINITIONS(-Os -Wall --std=gnu99)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)
