SET( CMAKE_BUILD_TYPE Debug )

SET(COMMON_SOURCES action.c crypto.c crypto_secretbox_salsa208poly1305.c hash.c daemon.c cJSON.c log.c args.c ikcp.c)
SET(GTS_SERVER_SOURCES ${COMMON_SOURCES} nat.c GTS-server.c)
SET(GTS_CLIENT_SOURCES ${COMMON_SOURCES} GTS-client.c)

ADD_EXECUTABLE(gts-ser ${GTS_SERVER_SOURCES})
ADD_EXECUTABLE(gts-cli ${GTS_CLIENT_SOURCES})

FIND_PACKAGE(OpenSSL REQUIRED)

FIND_PACKAGE(SODIUM REQUIRED)
IF(SODIUM_FOUND)
	INCLUDE_DIRECTORIES(${SODIUM_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(gts-ser ${SODIUM_LIBRARY})
	TARGET_LINK_LIBRARIES(gts-cli ${SODIUM_LIBRARY})
ELSE(SODIUM_FOUND)
	MESSAGE(FATAL_ERROR ”SODIUM library not found”)
ENDIF(SODIUM_FOUND)

TARGET_LINK_LIBRARIES(gts-ser m crypto ssl)
TARGET_LINK_LIBRARIES(gts-cli m crypto ssl)

INSTALL(TARGETS gts-ser gts-cli
		RUNTIME DESTINATION bin
		)
